--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         .home {
             height: 130vh;
             width: 100%;
-            background: url('https://cdn.wallpapersafari.com/37/45/mzGToU.jpg');
+            background: url('8888888.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
