--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="he">
 <head>
+    <script src="https://cdn.enable.co.il/licenses/enable-L18859tnuij096k5-0423-43815/init.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,7 +85,60 @@
             }
     </style>
 
-    <!-- start About -->
+    <a href="#" class="red-button">פרוייקטים שעשיתי</a>
+    <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .red-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff5a5f;
+            color: #fff;
+            font-size: 16px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+        }
+
+            .red-button:hover {
+                background-color: #e04449;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                transform: translateY(-2px);
+            }
+
+        /* Media query for mobile devices with screen width up to 767px */
+        @media only screen and (max-width: 767px) {
+            .container {
+                position: relative;
+            }
+
+            .red-button {
+                position: absolute;
+                top: 50px; /* Adjust this value to position the button */
+            }
+        }
+
+        /* Media query for computer devices with screen width of 768px and above */
+        @media only screen and (min-width: 768px) {
+            .container {
+                position: relative;
+            }
+
+            .red-button {
+                position: absolute;
+                top: 50px; /* Adjust this value to position the button */
+            }
+        }
+
+    </style>
 
     <section class="about" id="about">
         <div class="sec-top">
@@ -95,9 +149,23 @@
 
             <div class="content">
                 <div class="text">
-                    <h3>נועם רפופורט</h3>
+                    <div class="centered-heading">
+                        <h1>קצת עליי</h1>
+                        <br />
+                        <h4>נועם רפופורט</h4>
+                    </div>
+
+                    <style>
+                        .centered-heading {
+                            text-align: center;
+                        }
+
+                            .centered-heading h1, .centered-heading h4 {
+                                display: inline-block;
+                            }
+                    </style>
                     <span>אני תלמיד כיתה י במגמת הנדסת תכנה</span>
-                    <p style="font-size: 18px; font-weight: bold; color: #333;">
+                    <p style="font-size: 21px; font-weight: bold; color: #333;">
                         ממגמה זו שאבתי חלק מהידע שלי אך רוב הידע בא מלמידה עצמית
                         האהבה לבניית אתרים החלה כבר בשיעור הראשון
                         יום אחד אבי ביקש שאבנה לו אתר לעסק כמובן שהסכמתי
@@ -1078,6 +1146,3 @@
 </body>
 </html>
 
-<script>
-
-</script>
