--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             }
     </style>
 
-    <a href="#" class="red-button">פרוייקטים שעשיתי</a>
+    <a href="projects.html" class="red-button">פרוייקטים שעשיתי</a>
     <style>
         .container {
             display: flex;
