--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             }
     </style>
 
-    <a href="projects.htnl" class="red-button">פרוייקטים שעשיתי</a>
+    <a href="projects.html" class="red-button">פרוייקטים שעשיתי</a>
     <style>
         .container {
             display: flex;
